Fixup: Don't allow path column sorting button to wrap to a new line.

--- a/src/os2datascanner/projects/report/reportapp/static/src/css/components/_datatable.scss
+++ b/src/os2datascanner/projects/report/reportapp/static/src/css/components/_datatable.scss
@@ -233,6 +233,7 @@
     z-index: 2;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     background-color: #f4f4f4;
+    white-space: nowrap;
     top: calc(2rem + var(--size-logo-height) + 6rem); // for sticky purposes; header height + 6rem
     @media (min-width: $break-lg) {
       top: 6rem; // for sticky purposes
